@@ -20,6 +20,10 @@ Directly remote-control the specified host. You can omit port if the server is r
 .IP
 Set port to which iTALC should connect in order to contact the local iTALC-service-daemon. Default: 5800
 .
+.IP "\fB\-isdhost\fP \fIip\fP
+.IP
+Set the host to which iTALC should connect in order to contact the local iTALC-service-daemon. Default: localhost
+.
 .PP
 .SH SEE ALSO
 .IR ica (1),
